<resources>
    <string name="app_name">Unzip</string>
    <string name="tv_title_on_boarding">Welcome to UnZip!</string>
    <string name="tv_intro">Unzip can extract ZIP, RAR, 7Z, TAR and all other compressed files. Supports split archives for certain formats.</string>
    <string name="btn_get_start">Get started!</string>
    <string name="tv_internal_storage">Internal Storage</string>
    <string name="categories">Categories</string>
    <string name="Compressed">Compressed</string>
    <string name="Compressing">Compressing</string>
    <string name="extracted">Extracted</string>
    <string name="file_explorer">File Explorer</string>
    <string name="google_driver">Google Driver</string>
    <string name="dropbox">Dropbox</string>
    <string name="recently">Recently</string>
    <string name="see_all">See all</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="setting">Setting</string>
    <string name="show_recently">Show Recently</string>
    <string name="language">Language</string>
    <string name="privavy_policy">Privavy Policy</string>
    <string name="term">Term of Use</string>
    <string name="contact">Contact Us</string>
    <string name="shareApp">Share This App</string>
    <string name="share">Share</string>
    <string name="review">Write a review</string>
    <string name="english">English</string>
    <string name="no_files_found">NO FILES FOUND</string>
    <string name="open_permission">Open setting permissions</string>
    <string name="guideTurnOnPermission" translatable="false"><![CDATA[Please turn on permission at [Setting] > [Permission]]]></string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="rotating">Rotating</string>
    <string name="detail">Detail</string>
    <string name="tv_recycle_bin">Recycle Bin</string>
    <string name="delete_notify">"Files will be delete forever. "</string>
    <string name="cancel">Cancel</string>
    <string name="restock">Restock</string>
    <string name="restore_notify">Are you sure to restock this file?</string>
    <string name="rename">Rename</string>
    <string name="move_recycle_bin_notify">Move file to Recycle Bin?</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="term_content" translatable="false">
        <![CDATA[ <p><strong>Terms of Use</strong></p>
        <p>If you continue to use this application , you are agreeing to comply with and be bound by
            the following terms and conditions of use, which together with our privacy policy govern
            app relationship with you in relation to this application. If you disagree with any part
            of these terms and conditions, please do not use our application.</p>


        <p>This is a security service and we do not guarantee to give you %100 security. It was
            designed to protect your conversations and having them backed up on encrypted cloud
            platform. You accept that we do not guarantee to give you exact results by downloading
            and upgrading your membership. Keep in mind that this app does not add a passcode to the
            original applications, only the imported conversations of your choice.</p>


        <p><strong>Links To Other Web Sites</strong><br> We have no control over, and assumes no
            responsibility for, the content, privacy policies, or practices of any third party web
            sites or services. You further acknowledge and agree that Ontrack SUNTECH LTD. shall not
            be responsible or liable, directly or indirectly, for any damage or loss caused or
            alleged to be caused by or in connection with use of or reliance on any such content,
            goods or services available on or through any such web sites or services. We strongly
            advise you to read the terms and conditions and privacy policies of any third party web
            sites or services that you visit.</p>


        <p><strong>Law</strong><br> These Terms constitute the entire agreement between us regarding
            our Service, and supersede and replace any prior agreements we might have between us
            regarding the Service.</p>


        <p><strong>Changes</strong><br> We reserve the right, at our sole discretion, to modify or
            replace these Terms at any time. Any changes to the Terms will be effective immediately.
            By continuing to access or use our Service after those revisions become effective, you
            agree to be bound by the revised terms. If you do not agree to the new terms, please
            stop using the Service.</p>


        <p><strong>Warranty Disclaimer</strong><br> This is an unofficial product. Any product
            names, logos, brands, and other trademarks or images featured or referred to within this
            app are the property of their respective trademark holders. Any of these trademark
            holders are not affiliated This is app, our products, or with us. They do not sponsor or
            endorse this app or any of our online products. Neither we nor any third parties provide
            any warranty or guarantee as to the accuracy, timeliness, performance, completeness or
            suitability of the information and materials found or offered in this app for any
            particular purpose.<br> Your use of any information or materials in this app is entirely
            at your own risk, for which we shall not be liable. It shall be your own responsibility
            to ensure that any products, services or information available through this app meet
            your specific requirements.</p>


        <p><strong>Free Trial</strong> <br>Suntech provides a FREE TRIAL period during which you can
            use all features of the service for a limited period of time. You can manage or cancel
            the trial subscription through your App Store account. </p>


        <p><strong>Payment</strong><br> We services are provided through the APP STORE on a
            paid subscription basis. We rates for services are listed in the App and on the App
            Store. We reserves the right to modify its rates at any time and/or to offer
            special promotions. We does not issue refunds for services. We does not send
            invoices to its customers. Instead, you have confidential access to your account balance
            information through the App Store. If you have a billing dispute, you must contact the
            App Store to seek a remedy. </p>


        <p><strong>Contact us</strong><br> If you have questions regarding this privacy policy, you
            may email suntectltd.software@gmail.com<br> Phone number: 0353358792<br> Room 601, Lot
            B12D21, Cau Giay New Urban Area, Dich Vong Hau Ward, Cau Giay, Hanoi</p>]]>
    </string>
    <string name="tv_file_name">Name</string>
    <string name="tv_file_path">Path</string>
    <string name="tv_file_size">Size</string>
    <string name="tv_file_modification_date">Modification date</string>
    <string name="tv_file_resolution">Resolution</string>
    <string name="exit">Exit</string>
    <string name="extract">Extract</string>
    <string name="edit_pass_word">Please enter if your file has a password</string>
    <string name="zip" translatable="false">Zip</string>
    <string name="rar" translatable="false">Rar</string>
    <string name="seven_z" translatable="false">.7z</string>
    <string name="tar" translatable="false">Tar</string>
    <string name="doc" translatable="false">Doc</string>
    <string name="pdf" translatable="false">PDF</string>
    <string name="pptx" translatable="false">PowerPoint</string>
    <string name="excel" translatable="false">Excel</string>
    <string name="txt" translatable="false">Txt</string>
    <string name="all">All</string>
    <string name="name">Name…</string>
    <string name="password">Password</string>
</resources>