<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/delete" />
            <item
                android:id="@+id/action_rotating"
                android:icon="@drawable/ic_menu_rotating"
                android:title="@string/rotating" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/action_detail"
                android:icon="@drawable/ic_menu_detail"
                android:title="@string/detail" />
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>