<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:background="@drawable/bg_file_detail"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/detail"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/tv_file_name"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/inter"
                android:textSize="@dimen/_12ssp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/tv_file_path"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFilePath"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/inter"
                android:textSize="@dimen/_12ssp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/tv_file_size"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFileSize"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/inter"
                android:textSize="@dimen/_12ssp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/tv_file_modification_date"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFileModification"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/inter"
                android:textSize="@dimen/_12ssp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableImage"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/tv_file_resolution"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFileResolution"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/inter"
                android:textSize="@dimen/_12ssp" />

        </TableRow>
    </TableLayout>
</LinearLayout>