<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="7"
    android:background="@drawable/bg_extract_dialog"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_30sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/extract"
        android:textColor="#050505"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingVertical="@dimen/_7sdp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_file_name"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editFileName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/inter"
        android:hint="@string/name"
        android:paddingHorizontal="10dp"
        android:textColor="#050505"
        android:textColorHint="#AEAEAE"
        android:textSize="@dimen/_12ssp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/tv_title_pass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/inter"
        android:gravity="start|center_vertical"
        android:text="@string/password"
        android:textColor="#050505"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_edit_text"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter"
            android:hint="@string/edit_pass_word"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColor="#050505"
            android:textColorHint="#AEAEAE"
            android:textSize="@dimen/_10ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10ssp"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_button_dialog_unselected"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_button_dialog_unselected"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/extract"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>